--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "weekly_report20190715-21"
+name: weekly_report20190715-21
 output_dir: ../docs
 navbar:
-  title: "weekly_report20190715-21"
+  title: weekly_report20190715-21
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/chj1ar/weekly_report20190715-21
 output:
   workflowr::wflow_html:
     toc: yes
